--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     </div>
   </section>
 
+
   <!-- Countdown -->
   <section class="countdown-section container" aria-labelledby="countdown-title">
     <h1 id="countdown-title">⏳ Countdown to Epistemicon 2025 🎉 </h1>
@@ -89,7 +90,7 @@
       <p>Epistemicon, hosted by <b> <span style="color: #EE0548;"> Andhra Loyola Institute of Engineering and
             Technology</span></b>, is a dynamic inter-collegiate fest celebrating innovation, creativity, and talent. It
         brings together students from diverse colleges to compete, collaborate, and showcase their skills across
-        technology, arts, science, and literature.</p>
+        technology, adaptability & feasibility.</p>
     </div>
   </section>
 
@@ -104,7 +105,7 @@
     <article class="step" data-event="expo">
       <span>01</span>
       <h3>Project Expo</h3>
-      <p>20/09/2025, Saturday, 10:00 am.</p>
+      <p>20/09/2025, Saturday</p>
       <a href="#" class="btn secondary learn-more">Learn more</a>
     </article>
 
@@ -121,6 +122,7 @@
           <li>Registration by 9:30 am</li>
           <li>Prototype setup required by 9:45 am</li>
           <li>Judging panel will visit each stall from 10:15 am</li>
+          <li>The final results will be determined solely by the jury’s decision.</li>
         </ul>
         </p>
       </div>
@@ -129,7 +131,7 @@
     <article class="step" data-event="paper">
       <span>02</span>
       <h3>Paper Presentation</h3>
-      <p>20/09/2025, Saturday, 1:00 pm.</p>
+      <p>20/09/2025, Saturday</p>
       <a href="#" class="btn secondary learn-more">Learn more</a>
     </article>
 
@@ -142,9 +144,10 @@
           Participants present their research papers on various topics.
           <br><br>Protocols:
         <ul>
-          <li>Submit abstract by 18/09/2025</li>
+          <li>Submit abstract by 18/09/2025 to respective department emails mentioned in the brochure</li>
           <li>Presentation time limit: 8 minutes + 2 minutes for Evaluation.</li>
           <li>Use of multimedia presentations allowed</li>
+          <li>The final results will be determined solely by the jury’s decision.</li>
         </ul>
         </p>
       </div>
@@ -153,7 +156,7 @@
     <article class="step" data-event="poster">
       <span>03</span>
       <h3>Poster Presentation</h3>
-      <p>20/09/2025, Saturday, 2:00 pm.</p>
+      <p>20/09/2025, Saturday</p>
       <a href="#" class="btn secondary learn-more">Learn more</a>
     </article>
 
@@ -168,7 +171,7 @@
         <ul>
           <li>Poster size max 24"x36"</li>
           <li>Posters must be displayed by 1:45 pm</li>
-          <li>Judging criteria includes creativity and clarity</li>
+          <li>Judging criteria includes application of latest technology, adaptability, feasibility, creativity</li>
         </ul>
         </p>
       </div>
@@ -177,7 +180,7 @@
     <article class="step" data-event="quiz">
       <span>04</span>
       <h3>Technical Quiz</h3>
-      <p>20/09/2025, Saturday, 4:00 pm.</p>
+      <p>20/09/2025, Saturday</p>
       <a href="#" class="btn secondary learn-more">Learn more</a>
     </article>
 
@@ -191,7 +194,7 @@
           <br><br>Protocols:
         <ul>
           <li>Teams of 2 participants</li>
-          <li>Registration closes by 19/08/2025</li>
+          <!-- <li>Registration closes by 19/08/2025</li> -->
           <li>Quiz duration: 60 minutes</li>
           <li>Topics include technology, innovation, and general science</li>
           <li>Use of electronic devices is not permitted during the quiz</li>
@@ -212,15 +215,15 @@
       tabindex="-1">
       <div class="popup-content">
         <button class="close-popup" aria-label="Close">&times;</button>
-        <h2 id="popup-quiz-title">Technical Quiz - Details</h2>
+        <h2 id="popup-quiz-title">Spot Events - Details</h2>
         <p>
-          Test your knowledge and quick thinking in this exciting quiz competition!
+          Spot events are on-the-spot competitions designed to test creativity, presence of mind, and fun engagement.
           <br><br>Protocols:
         <ul>
           <li>Teams of 2 participants</li>
-          <li>Registration closes by 19/08/2025</li>
-          <li>Quiz duration: 60 minutes</li>
-          <li>Topics include technology, innovation, and general science</li>
+          <li>Spot Registration</li>
+          <!-- <li>Quiz duration: 60 minutes</li> -->
+          <li>On-the-spot competitions</li>
           <li>Use of electronic devices is not permitted during the quiz</li>
         </ul>
         </p>
@@ -272,7 +275,7 @@
     <div class="d-flex flex-row flex-nowrap overflow-auto gap-3 pb-3">
       <!-- Video Card -->
       <div class="card video-card shadow-sm rounded-3" style="min-width: 250px;" data-aos="fade-up">
-        <div class="video-thumb" data-video="https://res.cloudinary.com/dcmt06mac/video/upload/v1756911137/epistemicon-2k25_doeqgf.mp4">
+        <div class="video-thumb ml-2" data-video="https://res.cloudinary.com/dcmt06mac/video/upload/v1756911137/epistemicon-2k25_doeqgf.mp4">
           <img src="17.jpeg" class="card-img-top rounded-top" alt="Promo Video 1">
           <div class="overlay"><span class="play-icon">▶</span></div>
         </div>
@@ -453,14 +456,18 @@
         <h2>Epistemicon-2K25</h2>
       </div>
 
-      <div class="footer-social">
+      <div class="footer-logo">
+        <h2> <a href="https://www.aliet.ac.in/" target="_blank">ALIET</a> </h2>
+      </div>
+
+      <!-- <div class="footer-social">
         <a href="https://www.facebook.com/share/1Gdweyrife/" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.instagram.com/aliet_cse_connect/?igsh=YmVscXAwdTFtOTZ2#" target="_blank"><i
             class="fab fa-instagram"></i></a>
         <a href="https://www.youtube.com/@alietcseofficial" target="_blank"><i class="fab fa-youtube"></i></a>
         <a href="https://www.linkedin.com/posts/aliet-cse-network_epistemicon2k24-aliet-cse-activity-7367381868054237185-Lc7E?utm_source=share&utm_medium=member_android&rcm=ACoAAD12y6EBCLhllJXZ8mEBTnKJCtYcOOeAqZQ"
           target="_blank"><i class="fab fa-linkedin-in"></i></a>
-      </div>
+      </div> -->
 
       <div class="footer-info">
         <p>&copy; 2025 Epistemicon | All rights reserved</p>
