--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <li>Teams of 2 participants</li>
           <li>Spot Registration</li>
           <!-- <li>Quiz duration: 60 minutes</li> -->
-          <li>On-the-spot competitions</li>
+          <li>On-the-spot technical competitions</li>
           <li>Use of electronic devices is not permitted during the quiz</li>
         </ul>
         </p>
