--- a/index.html
+++ b/index.html
@@ -204,18 +204,18 @@
     </div>
 
 
-    <article class="step" data-event="quiz">
+    <article class="step" data-event="spot">
       <span>05</span>
       <h3>Spot Events</h3>
       <p>20/09/2025, Saturday.</p>
       <a href="#" class="btn secondary learn-more">Learn more</a>
     </article>
 
-    <div class="popup-card" id="popup-quiz" role="dialog" aria-modal="true" aria-labelledby="popup-quiz-title"
+    <div class="popup-card" id="popup-spot" role="dialog" aria-modal="true" aria-labelledby="popup-spot-title"
       tabindex="-1">
       <div class="popup-content">
         <button class="close-popup" aria-label="Close">&times;</button>
-        <h2 id="popup-quiz-title">Spot Events - Details</h2>
+        <h2 id="popup-spot-title">Spot Events - Details</h2>
         <p>
           Spot events are on-the-spot competitions designed to test creativity, presence of mind, and fun engagement.
           <br><br>Protocols:
@@ -223,7 +223,7 @@
           <li>Teams of 2 participants</li>
           <li>Spot Registration</li>
           <!-- <li>Quiz duration: 60 minutes</li> -->
-          <li>On-the-spot technical competitions</li>
+          <li>On-the-spot competitions</li>
           <li>Use of electronic devices is not permitted during the quiz</li>
         </ul>
         </p>
