--- a/index.html
+++ b/index.html
@@ -392,16 +392,16 @@
     <form action="" method="post" class="contact-form" name="contact-form">
       <div class="inputRow">
         <input type="text" name="Name" placeholder="Your name" autocomplete="name" required>
-        <input type="number" name="Number" placeholder="Mobile number" autocomplete="tel">
+        <input type="number" name="Number" placeholder="Mobile number" autocomplete="tel" required>
       </div>
 
       <div class="inputRow">
         <input type="email" name="Email" placeholder="Your email" autocomplete="email" required>
-        <input type="text" name="College" placeholder="Your college" autocomplete="college">
+        <input type="text" name="College" placeholder="Your college" autocomplete="college" required>
       </div>
 
       <div class="inputRow">
-        <select name="Department" id="eventdd">
+        <select name="Department" id="eventdd" required>
           <option value="">--Select Your Department--</option>
           <option value="CSE">CSE</option>
           <option value="ECE">ECE</option>
